@@ -8,6 +8,8 @@ Xfce 4.6.1
     is run (bug 5156).
   * Make default button in 'delete multiple' dialog consistent with
     default in 'delete single' dialog (bug 5140).
+  * Reload the desktop when the first image is added to an image
+    list (bug 5001).
 
 
 Xfce 4.6.0
